# goal_strategy

./: CMakeLists.txt  README.md  package.xml
.github/: dependencies.repos
.github/workflows/: test.yml
docs/: ENGINE.md
include/: Krabi
include/goal_strategy/: AX12.h  actuators.h  actuators2023.h  actuators2025.h  actuators2026.h  billig.h  claws.h  coupe2019.h  coupe2021.h  coupe2022.h  coupe2023.h  coupe2024.h  coupe2025.h  coupe2026.h  goal.h  goal_logic.h  grabber.h  grabi.h  publisherCreator.h  pump.h  servomotor.h  stepper.h  subscriptionCreator.h
include/krabilib/: angle.h  constantes.h  distance.h  pose.h  position.h  positionPlusAngle.h  vec2d.h  vector.h
include/krabilib/strategie/: abeille.h  accelerator.h  actionGoTo.h  aireDeConstruction.h  aireDeDepose.h  assiette.h  bouee.h  carreFouille.h  dijkstra.h  etape.h  galerie.h  gardeManger.h  goldenium.h  hexagon_plat.h  mancheAAir.h  mediumLevelAction.h  mouillageNord.h  mouillageSud.h  phare.h  pileGateau.h  plantGroup.h  plateforme.h  port.h  reservoirEau.h  statuette.h  stockDeMatierePremiere.h  strategieV2.h  strategiev3.h  thermometre.h  vitrine.h  zoneDeRamassage.h
launch/: goal_strat_launch.py  goal_strategy.launch
src/Krabi/stm32/include/: angle.h  constantes.h  distance.h  position.h  positionPlusAngle.h  vec2d.h  vec3d.h  vector.h
src/Krabi/stm32/include/strategie/: abeille.h  accelerator.h  actionGoTo.h  dijkstra.h  etape.h  goldenium.h  mancheAAir.h  mediumLevelAction.h  mouillageNord.h  mouillageSud.h  phare.h  port.h  reservoirEau.h  strategieV2.h  strategiev3.h
src/Krabi/stm32/src/: angle.cpp  distance.cpp  position.cpp  positionPlusAngle.cpp  stub.c  vec2d.cpp  vec3d.cpp
src/Krabi/stm32/src/strategie/: abeille.cpp  accelerator.cpp  actionGoTo.cpp  dijkstra.cpp  etape.cpp  goldenium.cpp  mancheAAir.cpp  mediumLevelAction.cpp  mouillageNord.cpp  mouillageSud.cpp  phare.cpp  port.cpp  reservoirEau.cpp  strategiev3.cpp
src/goal/: actuators.cpp  actuators2023.cpp  actuators2025.cpp  actuators2026.cpp  billig.cpp  claws.cpp  coupe2019.cpp  coupe2020.cpp  coupe2021.cpp  coupe2022.cpp  coupe2023.cpp  coupe2024.cpp  coupe2025.cpp  coupe2026.cpp  goal_logic.cpp  grabber.cpp  grabi.cpp  main.cpp  node_main.cpp  publisherCreator.cpp  pump.cpp  servomotor.cpp  stepper.cpp  subscriptionCreator.cpp
src/krabilib/: angle.cpp  distance.cpp  pose.cpp  position.cpp  positionPlusAngle.cpp  stub.c  vec2d.cpp  vec3d.cpp
src/krabilib/strategie/: abeille.cpp  accelerator.cpp  actionGoTo.cpp  aireDeConstruction.cpp  aireDeDepose.cpp  assiette.cpp  bouee.cpp  carreFouille.cpp  dijkstra.cpp  etape.cpp  galerie.cpp  gardeManger.cpp  goldenium.cpp  hexagon_plat.cpp  mancheAAir.cpp  mediumLevelAction.cpp  mouillageNord.cpp  mouillageSud.cpp  phare.cpp  pileGateau.cpp  plantGroup.cpp  port.cpp  reservoirEau.cpp  statuette.cpp  stockDeMatierePremiere.cpp  strategiev3.cpp  thermometre.cpp  vitrine.cpp  zoneDeRamassage.cpp
srv/: UpdateStrat.srv
test/: test_coupe2026.cpp  test_geometry.cpp  test_goal_logic.cpp  test_goal_strat_node.cpp  test_mission_graph.cpp
