<?xml version="1.0"?>
<package format="2">
  <name>goal_strategy</name>
  <version>0.0.0</version>
  <description>The goal_strategy package</description>

  <maintainer email="victor.dubois@free.fr">victor</maintainer>

  <license>TODO</license>

  <depend>catkin</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>Eigen</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>krabi_msgs</depend>
  <depend>message_generation</depend>

  <export>

  </export>
</package>
